--- a/anc-framework-mongodb/pom.xml
+++ b/anc-framework-mongodb/pom.xml
@@ -5,14 +5,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>AppNuclearCenter</artifactId>
         <groupId>com.dumas.anc</groupId>
+        <artifactId>AppNuclearCenter</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>anc-framework-mongodb</artifactId>
     <name>anc-framework-mongodb</name>
-    <version>${anc.version}</version>
+    <version>1.0.0-SNAPSHOT</version>
     <description>
         SpringBoot集成mongodb
     </description>
