--- a/anc-framework-mq/pom.xml
+++ b/anc-framework-mq/pom.xml
@@ -3,15 +3,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>AppNuclearCenter</artifactId>
         <groupId>com.dumas.anc</groupId>
+        <artifactId>AppNuclearCenter</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>anc-framework-mq</artifactId>
     <name>anc-framework-mq</name>
-    <version>${anc.version}</version>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <description>
         消息队列框架封装
